Fixed gallery on smaller monitors.

--- a/wwwroot/assets/styles/style.css
+++ b/wwwroot/assets/styles/style.css
@@ -222,8 +222,14 @@ hr.style14 {
   }
 
   /* Makes the image alternative for smaller devices hidden on larger devices */
-  @media (hover: hover) {
+  @media (hover: hover) and (min-width: 1000px) {
     .hidden-big-screen {
+      display: none;
+    }
+  }
+
+  @media (hover: hover) and (max-width: 999px) {
+    .hidden-mobile {
       display: none;
     }
   }
